--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,10 @@
-<html>
-    <head>
-        <title>AIFOS blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">AIFOS Blog</a></h1>
-        </div>
-
+{% extends 'blog/base.html' %}
+{% block content %}
         {% for post in posts %}
-         <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-        </div>
+            <div class="post">
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
         {% endfor %}
-
-    </body>
-</html>
+{% endblock %}
